# django-quicker

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  release-drafter.yml
.github/workflows/: codeql.yml  deploy-image.yml  lint.yaml  make-lint.yaml  release-drafter.yaml
core/: manage.py
core/accounts/: authoritize.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py
core/general/utils/: misc.py  settings.py
core/project/: permissions.py  settings.py  urls.py  views.py  wsgi.py
core/project/settings/: __init__.py  base.py  envvars.py
core/project/settings/templates/: settings.dev.py
core/welcome/: apps.py  models.py  urls.py  views.py
core/welcome/migrations/: 0001_initial.py
docs/: book.toml
docs/src/: SUMMARY.md
project/project/: settings.py
scripts/: dockerized-core-run.sh
