[tool.poetry]
name = "django-quicker"
version = "0.1.0"
description = "a quick start template for a django project ."
authors = ["ouhammmourachid <rachidouhammou21@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
djangorestframework-simplejwt = "^5.3.1"
dj-split-settings = "^0.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.2"
codecov = "^2.1.13"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
