[project]
name = "django-quicker"
version = "0.1.0"
description = "a quick start template for a django project ."
authors = ["ouhammmourachid <rachidouhammou21@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
package-mode = false

dependencies =[
    "dj-split-settings>=0.1.3",
    "django>=5.1.7",
    "django-cors-headers>=4.7.0",
    "djangorestframework-simplejwt>=5.5.0",
]

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]
